--- a/public/home.html
+++ b/public/home.html
@@ -20,7 +20,7 @@
     <link rel="icon" href="img/logo.svg" type="image/ico">
 
     <!-- css libraries -->
-    <link rel="stylesheet" href="css/index.css" type="text/css">
+    <!-- <link rel="stylesheet" href="css/index.css" type="text/css"> -->
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- Leave those next 4 lines if you care about users using IE8 -->
     <!--[if lt IE 9]>
